fixed button border jumping on hover

--- a/dieprojektfabrik/src/scss/_mixins.scss
+++ b/dieprojektfabrik/src/scss/_mixins.scss
@@ -126,7 +126,6 @@ $breakpoints: (
       padding-right: toRem(80);
     } @else {
       background-image: none;
-      padding-right: toRem(10);
     }
   }
 
