--- a/dieprojektfabrik/src/scss/_team-portraits-3col.scss
+++ b/dieprojektfabrik/src/scss/_team-portraits-3col.scss
@@ -1,7 +1,7 @@
 .team-portraits-3col {
   background-color: $lightgrey;
   border: solid 2.5rem white;
-  padding: toRem(80) 0 toRem(80) !important;
+  padding: toRem(100) 0 toRem(100) !important;
   @include media($until: 'sm') {
     border: solid 1.2rem white;
   }
@@ -27,7 +27,7 @@
       }
     }
     .wp-block-button__link {
-      padding: toRem(7) toRem(10) toRem(5);
+      padding: toRem(10) toRem(10) toRem(5);
       margin-right: toRem(10);
       margin-bottom: toRem(10);
       text-transform: uppercase;
